ring-kde (2.0.0-1) unstable; urgency=medium

  [ Thibault Cohen]
  * First release

 -- Thibault Cohen <thibault.cohen@savoirfairelinux.com>  Tue, 17 Mar 2015 10:50:19 -0400