@@ -1,11 +1,14 @@
 #!/usr/bin/make -f
 
 # Uncomment this to turn on verbose mode.
-export DH_VERBOSE=1
+#export DH_VERBOSE=1
 PKD  = $(abspath $(dir $(MAKEFILE_LIST)))
-#PKG  = $(word 2,$(shell dpkg-parsechangelog -l$(PKD)/changelog --show-field=Source))
 PKG  = $(shell dpkg-parsechangelog -l$(PKD)/changelog --show-field=Source)
 VER ?= $(shell dpkg-parsechangelog -l$(PKD)/changelog | perl -ne 'print $$1 if m{^Version:\s+(?:\d+:)?(\d.*)(?:\-\d+.*)};')
+
+DAEMON_TAG = origin/master
+LRC_TAG = origin/master
+KDE_TAG = origin/master
 
 .PHONY: get-orig-source
 
@@ -39,19 +42,28 @@ override_dh_auto_install:
 	dh_auto_install
 
 get-orig-source:
+	# Gnome
+	git init
+	git remote add git://anongit.kde.org/ring-kde.git
+	git fetch --all
+	git checkout packaging -f
+	git config user.name "joulupukki"
+	git config user.email "joulupukki@localhost"
+	git merge $(KDE_TAG) --no-edit
+	rm -rf .git
 	# Daemon
 	@echo "# Downloading Ring Daemon ..."
 	rm -rf ring
 	mkdir -p ring
-	git clone https://gerrit-sflphone.savoirfairelinux.com/ring daemon
-	cd daemon && git checkout release-2.0.x
+	git clone https://gerrit-sflphone.savoirfairelinux.com/ring-daemon daemon
+	cd daemon && git checkout $(DAEMON_TAG)
 	cd daemon && $(RM) -rf .git
 	# LibRingClient
 	@echo "# Downloading Lib Ring Client ..."
 	rm -rf libringclient
 	mkdir -p libringclient
 	git clone git://anongit.kde.org/libringclient.git libringclient
-	cd libringclient && git checkout release-0.1.x
+	cd libringclient && git checkout $(LRC_TAG)
 	cd libringclient && $(RM) -rf .git
 	# Packing
 	@echo "# Packing ... "
