@@ -1,6 +1,9 @@
 %define name        ring-kde
-%define version     0.1.0
+%define version     2.0.1
 %define release     1
+%define daemon_tag  origin/master
+%define lrc_tag     origin/master
+%define kde_tag     origin/master
 
 Name:               %{name}
 Version:            %{version}
@@ -41,12 +44,22 @@ Ring is a secured and distributed communication software.
 
 %prep
 %setup -q
+# Gnome
+echo "# Get gnome client"
+git init
+git remote add origin git://anongit.kde.org/ring-kde.git
+git fetch --all
+git checkout packaging -f
+git config user.name "joulupukki"
+git config user.email "joulupukki@localhost"
+git merge %{kde_tag} --no-edit
+rm -rf .git
 # Daemon
 echo "# Downloading Ring Daemon ..."
 rm -rf ring
-git clone https://gerrit-ring.savoirfairelinux.com/ring daemon
+git clone https://gerrit-ring.savoirfairelinux.com/ring-daemon daemon
 cd daemon 
-git checkout 2.0.1
+git checkout %{daemon_tag}
 rm -rf .git
 cd ..
 # LibRingClient
@@ -54,7 +67,7 @@ echo "# Downloading Lib Ring Client ..."
 rm -rf libringclient
 git clone git://anongit.kde.org/libringclient.git libringclient
 cd libringclient
-git checkout 0.1.0
+git checkout %{lrc_tag}
 rm -rf .git
 cd ..
 
@@ -100,5 +113,8 @@ mv ../libringclient/install/share/*  %{buildroot}/%{_datadir}
 
 
 %changelog
+* Fri Apr 24 2015 Thibault Cohen <thibault.cohen@savoirfairelinux.com> - 2.0.1-1
+- New upstream version
+
 * Fri Mar 27 2015 Thibault Cohen <thibault.cohen@savoirfairelinux.com> - 0.1.0-1
 - New upstream version
